# research_POCs

./: .gitignore  Cargo.toml  README.md
basic/: Cargo.toml
basic/examples/: hello_poly.rs  poly_ops.rs  poseidon2.rs  products_with_pairing.rs  serialize_deserialize.rs  shitty_fri.rs
basic/src/: lib.rs  utils.rs
basic/tests/: test_integration.rs
course/: Cargo.toml
course/examples/: hash.rs  hash_collisions.rs  mds_matrix.rs  message.rs  rejection_sampling.rs  toy_digital_sig.rs  toy_sha.rs
cpp/: CMakeLists.txt
cpp/include/: poly_test.cuh
cpp/src/: lib.cu  poly_test.cu
fri_poc/: Cargo.toml  README.md
fri_poc/benches/: benchmark.rs
fri_poc/examples/: frie2e.rs  frie2ecpu.rs  frie2egpu.rs
fri_poc/src/: data_structures.rs  lib.rs  prover.rs  transcript.rs  utils.rs  verifier.rs
fri_poc/tests/: e2etests.rs  test_fold_poly_vs_vec.rs  test_merlin_encoding.rs
go/example_module/: example_module  go.sum  main.go
go/example_module/test_package/: test_package.go
plonky3_air/: Cargo.toml
plonky3_air/examples/: fib_icicle_trace.rs  fibonacci_trace.rs
plonky3_air/src/: air.rs  lib.rs  utils.rs  virtual_column.rs
rust/: Cargo.toml
rust/examples/: basic_fri.rs  hello.rs  hello_poly.rs  poseidon2.rs  shitty_fri.rs
rust/src/: lib.rs
rust/tests/: test_integration.rs
sumcheck_playground/: Cargo.toml  README.md
sumcheck_playground/benches/: benchmark.rs
sumcheck_playground/examples/: jolt_ab_sumcheck.rs  jolt_transcript_eg.rs  prover_runtime.rs  relaxed_r1cs.rs  toy_example.rs  toy_example2.rs
sumcheck_playground/src/: jolt_transcript.rs  lib.rs  transcript.rs  utils.rs
