[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icicle-core = { workspace = true }
icicle-runtime = { workspace = true }
icicle-hash = { workspace = true }

icicle-babybear = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.6.0" }
icicle-m31 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.6.0"}
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.6.0"}

hex = "0.4" 
# icicle-babybear = {path = "../../icicle/wrappers/rust/icicle-fields/icicle-babybear" }
# icicle-bn254 = {path = "../../icicle/wrappers/rust/icicle-curves/icicle-bn254" }
# icicle-m31 = {path = "../../icicle/wrappers/rust/icicle-fields/icicle-m31" }


rand = "0.8"
clap = { version = "<=4.4.12", features = ["derive"] }
rayon="1.5"

[features]