[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icicle-core = { workspace = true }
icicle-runtime = { workspace = true }
icicle-hash = { workspace = true }
clap = {workspace = true}
rayon = {workspace = true}

icicle-m31 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0"}
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0"}
icicle-babybear = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0" }
hex = "0.4" 
# icicle-babybear = {path = "../../icicle/wrappers/rust/icicle-fields/icicle-babybear" }
# icicle-bn254 = {path = "../../icicle/wrappers/rust/icicle-curves/icicle-bn254" }
# icicle-m31 = {path = "../../icicle/wrappers/rust/icicle-fields/icicle-m31" }

rand = "0.8"


[features]