[package]
name = "fri_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-babybear = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main"}
icicle-m31 = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main"}
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main"}
icicle-hash = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main"}
#hex = {version = "0.4", optional = true} # for debug-transcript feature
hex = {version = "0.4"}
# icicle-core = {path = "../../icicle/wrappers/rust/icicle-core" }
# icicle-runtime = {path = "../../icicle/wrappers/rust/icicle-runtime" }
# icicle-hash = {path = "../../icicle/wrappers/rust/icicle-hash" }
# icicle-babybear = {path = "../../icicle/wrappers/rust/icicle-fields/icicle-babybear" }
# icicle-bn254 = {path = "../../icicle/wrappers/rust/icicle-fields/icicle-bn254" }

merlin = {version = "3.0.0"}
#merlin ={ version = "3.0.0", features = ["debug-transcript"]}
rand = "0.8"
clap = { version = "<=4.4.12", features = ["derive"] }
bitvec = "1.0.1"
rayon = "1.10"

[features]
# nightly = []
# debug-transcript = ["hex"]