[package]
name = "fri_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
icicle-core = { workspace = true }
icicle-runtime = { workspace = true }
icicle-hash = { workspace = true }

icicle-babybear = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0" }
#hex = {version = "0.4", optional = true} # for debug-transcript feature
hex = {version = "0.4"}
# icicle-babybear = {path = "../../icicle/wrappers/rust/icicle-fields/icicle-babybear" }

merlin = {version = "3.0.0"}
#merlin ={ version = "3.0.0", features = ["debug-transcript"]}
rand = "0.9"
clap = { version = "<=4.4.12", features = ["derive"] }
bitvec = "1.0.1"
rayon = "1.10"
rand_chacha = "0.9.0"
log = "0.4.25"
env_logger = "0.11.6"


[features]
nightly = []
#debug-transcript = ["hex"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

