[package]
name = "plonky3_air"
version = "0.1.0"
edition = "2021"

[dependencies]
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-babybear = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main"}
icicle-m31 = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main"}
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main"}
icicle-hash = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main"}