[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icicle-cuda-runtime = { git = "https://github.com/ingonyama-zk/icicle.git"}
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git"}
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git"}
icicle-babybear = { git = "https://github.com/ingonyama-zk/icicle.git"}
clap = { version = "4.4.12", features = ["derive"] }

[features]
profile = []