[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", branch="emir/host-arithmetic" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", branch="emir/host-arithmetic" }
icicle-babybear = { git = "https://github.com/ingonyama-zk/icicle.git", branch="emir/host-arithmetic"}
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", branch="emir/host-arithmetic"}
icicle-hash = { git = "https://github.com/ingonyama-zk/icicle.git", branch="emir/host-arithmetic"}

# icicle-core = {path = "../../icicle/wrappers/rust/icicle-core" }
# icicle-runtime = {path = "../../icicle/wrappers/rust/icicle-runtime" }
# icicle-hash = {path = "../../icicle/wrappers/rust/icicle-hash" }
# icicle-babybear = {path = "../../icicle/wrappers/rust/icicle-fields/icicle-babybear" }
# icicle-bn254 = {path = "../../icicle/wrappers/rust/icicle-fields/icicle-bn254" }


rand = "0.8"
clap = { version = "<=4.4.12", features = ["derive"] }

[features]